# illusionist

./: .firebaserc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEVELOP.md  Makefile  README.md  RELEASE.md  RELEASING.md  environment.yml  firebase.json  lerna.json  mkdocs.yml  package-lock.json  package.json
.github/workflows/: docs-cf-pages.yml  docs.yml  test.yml
docs/: faq.md  index.md  usage.ipynb
docs/theme/: main.html
docs/theme/partials/: nav.html
examples/: linked.ipynb  matplotlib.ipynb  multiplier.ipynb  pandas.ipynb  static  widget-gallery-floats.ipynb  widget-gallery.ipynb
js/: .babelrc  .eslintrc.js  .eslintrc.json  .gitignore  README.md  package-lock.json  package.json  tsconfig.json  tslint.json  webpack.config.js
js-backup/: .babelrc  package-lock.json  package.json  webpack.config.js
js-backup/src/: index.js  manager.js
js-backup/style/: index.css
js/illusionist-html-manager/: package.json
js/illusionist-html-manager/scripts/: concat-amd-build.js
js/illusionist-html-manager/src/: embed-amd-render.ts  embed.ts  htmlmanager.ts  index.ts  libembed-amd.ts  libembed.ts  output.ts  output_renderers.ts
js/src/: app.ts  embed.js  index.js  index.ts  manager.js  manager.ts
notebooks/: Untitled.ipynb  Untitled1.ipynb  linked.ipynb  matplotlib-Copy1.ipynb  matplotlib.ipynb  matplotlib.ipynb copy  multiplier.ipynb  simple-operations.ipynb  slider-label.ipynb  test-jslink.ipynb  widget-gallery-floats.ipynb  widget-gallery.ipynb  widget-gallery.ipynb copy
python/: MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-package.txt  requirements.txt  setup.cfg  setup.py
python/illusionist/: __init__.py  client.py  config.py  exporter.py  exporter_html.py  exporter_nb.py  kernel_utils.py  nbconvert_exporter.py  preprocessor.py  simple_kernel.py  test_async.py  test_client.py  test_papermill.py  test_sync.py  utils.py  widgets.py  widgets_str.py
python/illusionist/backup/: myclasses.py  simpler_kernel.py  test_async_nb.py  test_papermill.py
python/illusionist/nbconvert_templates/: illusionist.tpl
python/illusionist/nbconvert_templates/static/: .gitignore
python/illusionist/templates/illusionist/: index.html.j2
python/illusionist/tests/: conftest.py  embed.ts  test_affected.py  test_examples.py  test_hash_fn.py  test_import.py  test_kernel_hash_fn.py  test_kernel_possible_values.py  test_kernel_utils.py  test_kernel_utils_matrix.py  test_output_mpl.py  test_pkg.py  test_possible_values.py  test_preprocessor.py  test_static_values.py  test_static_values_by_widget.py  test_target_widgets.py  test_widget_matrix.py  utils.py
python/share/jupyter/nbconvert/templates/illusionist/: illusionist2.tpl  illusionist3.tpl  index.bu.html  index.html.j2  index.tpl
python/share/jupyter/nbconvert/templates/illusionist/static/: .gitignore  main.js
