[tool.poetry]
name = "illusionist"
version = "0.3.0"
packages = [{ include = "illusionist" }]
homepage = "https://github.com/danielfrg/mkdocs-jupyter"
repository = "https://github.com/danielfrg/mkdocs-jupyter"
documentation = "https://github.com/danielfrg/mkdocs-jupyter"
description = "Interactive Jupyter Widgets without a Kernel"
authors = ["Daniel Rodriguez"]
maintainers = ["Daniel Rodriguez"]
license = "Apache License, Version 2.0"
readme = "README.md"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering",
]
include = ["illusionist/**/assets/*"]

# Poetry dependencies are only used for CI and dev
# Package is done via Python setuptools to package the data_files
[tool.poetry.dependencies]
python = ">=3.7.1,<4"
nbconvert = ">=6.2.0,<7"
nbclient = ">=0.5.0"
nbformat = ">=5.0.7"
ipywidgets = "^7.6.5"
structlog = "^21.1.0"

[tool.poetry.dev-dependencies]
# [tool.poetry.group.dev]
# optional = true
# [tool.poetry.group.dev.dependencies]
black = "21.9b0"
flake8 = "^3"
isort = "^5"
pylint = "^2.11.1"

# [tool.poetry.group.test]
# optional = true
# [tool.poetry.group.test.dependencies]
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
ipykernel = "^6.4.1"

[tool.pytest.ini_options]
testpaths = ["illusionist/tests"]
addopts = [
  "-s", "-vv",
  "--ignore=dist",
  "--ignore=site-packages",
  "--strict-markers",
  "--cov=illusionist",
  "--cov-report=term",
  "--cov-config=pyproject.toml",
]
xfail_strict = true

[tool.coverage.run]
branch = true
parallel = true

[tool.coverage.report]
show_missing = true
ignore_errors = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError"
]
omit = ["illusionist/tests/*"]

[tool.coverage.paths]
source = [
    "illusionist",
    ".venv/lib/python*/site-packages/illusionist",
]

[tool.black]
line_length = 79
skip_string_normalization = true

[tool.isort]
ensure_newline_before_comments = true
include_trailing_comma = true
line_length = 79
multi_line_output = 3
profile = "black"

[tool.pydocstyle]
add_ignore = ["D100", "D101", "D102", "D103", "D104", "D105"]
convention = "numpy"
inherit = false
match_dir = "illusionist"

[tool.poetry.plugins]
[tool.poetry.plugins."nbconvert.exporters"]
illusionist = "illusionist:IllusionistHTMLExporter"
illusionist-nb = "illusionist:IllusionistNotebookExporter"

[build-system]
requires = ["poetry>=1.1", "setuptools>=57,<58"]
build-backend = "poetry.masonry.api"
